fix button spacing

--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -6,7 +6,7 @@
   background-color: $primary-white;
   color: $primary-dark-1;
   border: 1px solid $primary-text-2;
-  padding: 1rem 2rem;
+  padding: 0.8rem 2rem;
   @include flex;
   cursor: pointer;
   transition: all 0.2s;
